tests/errors/well-formed/malformed-interval.expect
---CODE---
1
---STDERR---
Error: Failed to parse  --> tests/errors/well-formed/malformed-interval.fil:1:27
  |
1 | comp Main<'G: 1>(go: ['G, 3] 1) -> () {}
  |                           ^
  |
  = time expressions must have the form `E+n' where `E' is an event and `n' is a concrete number or sum of parameters: 
Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
